--- a/ExamenP3_EricMullo/Views/SavedPage.xaml
+++ b/ExamenP3_EricMullo/Views/SavedPage.xaml
@@ -1,11 +1,8 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ExamenP3_EricMullo.Views.NewPage1"
-             Title="Emulllo">
+            x:Class="ExamenTercerProgreso_Eric.Views.SavedPage">
     <StackLayout>
-        <ListView x:Name="Emullo_ListView"
-                  ItemsSource="{Binding Aereopuertos}">
+        <ListView x:Name="scordova_listView"
+                 ItemsSource="{Binding Aeropuertos}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextCell Text="{Binding Nombre}" Detail="{Binding Pais}" />
