--- a/ExamenP3_EricMullo/Views/SavedPage.xaml
+++ b/ExamenP3_EricMullo/Views/SavedPage.xaml
@@ -1,8 +1,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-            x:Class="ExamenTercerProgreso_Eric.Views.SavedPage">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="ExamenP3_EricMullo.Views.SavedPage">
     <StackLayout>
-        <ListView x:Name="scordova_listView"
-                 ItemsSource="{Binding Aeropuertos}">
+        <ListView x:Name="emullo_listView"
+                  ItemsSource="{Binding Aeropuertos}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextCell Text="{Binding Nombre}" Detail="{Binding Pais}" />
