--- a/ExamenP3_EricMullo/Views/MainPage.xaml
+++ b/ExamenP3_EricMullo/Views/MainPage.xaml
@@ -1,10 +1,23 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ExamenP3_EricMullo.Views.MainPage">
-    <StackLayout>
+    <StackLayout Padding="20">
+
+        <!-- Entrada de texto para el país -->
         <Entry x:Name="emullo_entryPais" Placeholder="Ingrese un país" />
-        <Button Text="Buscar" x:Name="emullo_btnBuscar" Clicked="OnBuscarClicked" />
-        <Button Text="Limpiar" x:Name="emullo_btnLimpiar" Clicked="OnLimpiarClicked" />
-        <Label x:Name="emullo_lblResultado" />
+
+        <!-- Botón Buscar -->
+        <Button Text="Buscar"
+                Clicked="OnBuscarClicked" />
+
+        <!-- Botón Limpiar -->
+        <Button Text="Limpiar"
+                Clicked="OnLimpiarClicked" />
+
+        <!-- Resultado -->
+        <Label x:Name="emullo_lblResultado"
+               FontSize="16"
+               TextColor="Black"
+               Margin="10,20,10,0" />
     </StackLayout>
 </ContentPage>
